<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/top_bar_layout"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/text_color_black"
                android:text="@string/tui_song_info1"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/text_color_black"
                android:text="@string/tui_song_info2"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/text_color_black"
                android:text="@string/tui_song_info3"/>
        </LinearLayout>
    </LinearLayout>
    <!--退出登录-->
    <com.hdyg.zhimaqb.util.RevealLayout
        android:id="@+id/tuisong_btn"
        android:background="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="开启"/>
    </com.hdyg.zhimaqb.util.RevealLayout>

</LinearLayout>
