<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_dg"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:orientation="vertical">


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/color_white"
        android:gravity="bottom">

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_home"/>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_home"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/main_1"
                android:textColor="@drawable/tv_bottom"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_service"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_service"/>

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_service"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/main_2"
                android:textColor="@drawable/tv_bottom"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:src="@drawable/img_share"/>

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_share"
                android:layout_marginTop="5dp"
                android:text="@string/main_3"
                android:textColor="@drawable/tv_bottom"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:src="@drawable/img_me"/>

            <TextView
                android:id="@+id/tv_mee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_me"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/main_4"
                android:textColor="@drawable/tv_bottom"
                android:textSize="12sp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
